--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,14 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <android.support.v7.widget.AppCompatSpinner
+        android:id="@+id/mSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="35dp">
+
+
+    </android.support.v7.widget.AppCompatSpinner>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/mRecyclerView"
         android:layout_width="match_parent"
