--- a/app/src/main/res/layout/layout_adapter_pockmon.xml
+++ b/app/src/main/res/layout/layout_adapter_pockmon.xml
@@ -48,6 +48,16 @@
             android:text="@{`品质：`+bean.quality}"
             />
         <TextView
+            android:id="@+id/star"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@+id/name"
+            app:layout_constraintStart_toEndOf="@+id/quality"
+            android:layout_marginStart="10dp"
+            android:textSize="18sp"
+            android:text="@{`星级：`+bean.stars}"
+            />
+        <TextView
             android:id="@+id/strength"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
