--- a/app/src/main/res/layout/fragment_external_biography.xml
+++ b/app/src/main/res/layout/fragment_external_biography.xml
@@ -4,7 +4,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
               android:orientation="vertical"
-             tools:context=".externalbiography.ExternalBiographyFragment">
+             tools:context=".fragment.externalbiography.ExternalBiographyFragment">
 
     <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/mSpinner"
