--- a/app/src/main/res/layout/fragment_offline.xml
+++ b/app/src/main/res/layout/fragment_offline.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context=".offline.OfflineFragment">
+              tools:context=".fragment.offline.OfflineFragment">
 
     <android.support.v7.widget.AppCompatSpinner
         android:id="@+id/mSpinner"
