--- a/app/src/main/res/layout/layout_adapter_remarks.xml
+++ b/app/src/main/res/layout/layout_adapter_remarks.xml
@@ -18,28 +18,27 @@
 
         <TextView
             android:id="@+id/id"
-            android:layout_width="45dp"
+            android:layout_width="25dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginStart="5dp"
             android:textSize="18sp"
-            android:text="@{bean.id+`.`}"
             />
 
         <TextView
             android:id="@+id/remark"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="@id/id"
             app:layout_constraintStart_toEndOf="@id/id"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:textSize="18sp"
             android:text="@{bean.remark}"
             android:textColor="@color/blue_cc164bf5"
+            android:lineSpacingExtra="2dp"
             />
 
     </android.support.constraint.ConstraintLayout>
