--- a/app/src/main/res/layout/layout_adapter_pockmon.xml
+++ b/app/src/main/res/layout/layout_adapter_pockmon.xml
@@ -36,6 +36,17 @@
             android:textSize="18sp"
             android:text="@{bean.name}"
             />
+
+        <TextView
+            android:id="@+id/generation"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            app:layout_constraintTop_toTopOf="@+id/id"
+            app:layout_constraintStart_toEndOf="@id/name"
+            android:textSize="18sp"
+            android:text="@{`第`+bean.generation+`代`}"
+            />
         <TextView
             android:id="@+id/level"
             android:layout_width="@dimen/adapter_width"
